redirect to our telegram group test
Signed-off-by: itsvixano <vixanonew@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-test
+<!DOCTYPE html>
+<meta charset="utf-8">
+<title>Redirecting to i hate my life telegram group</title>
+<meta http-equiv="refresh" content="0; URL=https://t.me/ihatemylief/">
+<link rel="canonical" href="https://example.com/">
