ihatemylife: Stop redirecting

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to i hate my life telegram group</title>
-<meta http-equiv="refresh" content="0; URL=https://t.me/ihatemylief/">
-<link rel="canonical" href="https://example.com/">
+<title>I hate my life</title>
+<!-- <meta http-equiv="refresh" content="0; URL=https://t.me/ihatemylief/"> -->
+Hi there
