--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 <meta charset="utf-8">
 <title>I hate my life</title>
 <!-- <meta http-equiv="refresh" content="0; URL=https://t.me/ihatemylief/"> -->
-Hi there
+<p>Hi there, this is the i hate my life website, We absolutely hate our lives here</p>
+<p>You are thinking, WHAT <br>
+THE <br>
+FUCK <br>
+right now, so am i. Consider checking out our <a href="https://t.me/ihatemylief">Telegram group</a> for now meanwhile im making a cookie clicker for life haters</p>
