ihatemylife: Rework on the basic code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- linking part -->
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+<link rel="stylesheet" href="./css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+<!-- generic html shit -->
 <title>I hate my life</title>
-<!-- <meta http-equiv="refresh" content="0; URL=https://t.me/ihatemylief/"> -->
+
+<!-- the actual website -->
+<body>
+<h1>I hate my life</h1>
 <p>Hi there, this is the i hate my life website, We absolutely hate our lives here</p>
-<p>You are thinking, WHAT <br>
+<p>You are thinking,<br> WHAT <br>
 THE <br>
 FUCK <br>
-right now, so am i. Consider checking out our <a href="https://t.me/ihatemylief">Telegram group</a> for now meanwhile im making a cookie clicker for life haters</p>
+right now, so am i. Consider checking out our <a href="https://t.me/ihatemylief">Telegram group</a> and express your life hate there</p>
+</body>
