ihatemylife: Dont forget to notice me

--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
 <p>You are thinking,<br> WHAT <br>
 THE <br>
 FUCK <br>
-right now, so am i. Consider checking out our <a href="https://t.me/ihatemylief">Telegram group</a> and express your life hate there</p>
+right now, so am i. Consider checking out our <a style="color:red" href="https://t.me/ihatemylief">Telegram group</a> and express your life hate there</p>
 </body>
