ihatemylife: introduce loader

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
 <!-- linking part -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/loading.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 <!-- generic html shit -->
 <title>I hate my life</title>
+
+<!-- generic html shit for websites i make -->
+<div class="loader">
+    <p style="color: white; font-family: 'Roboto', sans-serif; font-size: 100px">Loading life hater...</p>
+  </div>
 
 <!-- the actual website -->
 <body>
@@ -19,3 +25,7 @@ THE <br>
 FUCK <br>
 right now, so am i. Consider checking out our <a style="color:red" href="https://t.me/ihatemylief">Telegram group</a> and express your life hate there</p>
 </body>
+
+<!-- stupid scripts -->
+<script src="./js/loading.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
