ihatemylife: introduce navigation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 
 <!-- the actual website -->
 <body>
+
+    <nav class="w3-bar w3-black">
+        <a class="pull-left w3-bar-item"><img id="navhate" src="./images/ihatemylife.jpg"></a>
+        <a href="#home" class="w3-button w3-bar-item">Home</a>
+      </nav>
+
 <h1>I hate my life</h1>
 <p>Hi there, this is the i hate my life website, We absolutely hate our lives here</p>
 <p>You are thinking,<br> WHAT <br>
