ihatemylife: Fixed to the navigation

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <!-- the actual website -->
 <body>
 
-    <nav class="w3-bar w3-black">
-        <a class="pull-left w3-bar-item"><img id="navhate" src="./images/ihatemylife.jpg"></a>
+    <nav class="w3-bar w3-white">
         <a href="#home" class="w3-button w3-bar-item">Home</a>
+       <!-- <a href="#home" class="w3-button w3-bar-item">Dark Mode</a> -->
       </nav>
 
 <h1>I hate my life</h1>
