ihatemylife: Welcome dark mode

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!-- linking part -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/darkstyle.css">
 <link rel="stylesheet" href="./css/loading.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
@@ -19,11 +20,10 @@
 <!-- the actual website -->
 <body>
 
-    <nav class="w3-bar w3-white">
+    <nav class="w3-bar">
         <a href="#home" class="w3-button w3-bar-item">Home</a>
-       <!-- <a href="#home" class="w3-button w3-bar-item">Dark Mode</a> -->
+        <a class="w3-button w3-bar-item" onclick="darktoggle()" >Dark Mode</a>
       </nav>
-
 <h1>I hate my life</h1>
 <p>Hi there, this is the i hate my life website, We absolutely hate our lives here</p>
 <p>You are thinking,<br> WHAT <br>
@@ -34,4 +34,6 @@ right now, so am i. Consider checking out our <a style="color:red" href="https:/
 
 <!-- stupid scripts -->
 <script src="./js/loading.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+<script src="./js/dark.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
