ihatemylife: Add tab icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <!-- generic html shit -->
 <title>I hate my life</title>
+<link rel="icon" href="./images/ihatemylife.jpg">
 
 <!-- generic html shit for websites i make -->
 <div class="loader">
