--- a/index.html
+++ b/index.html
@@ -30,11 +30,16 @@
 <p>You are thinking,<br> WHAT <br>
 THE <br>
 FUCK <br>
-right now, so am i. Consider checking out our <a style="color:red" href="https://t.me/ihatemylief">Telegram group</a> and express your life hate there</p>
+right now, so am i. Consider checking out our <a style="color:red" href="https://t.me/ihatemylief">Telegram group</a> and express your life hate there or play our "cookie clicker"</p>
+
+<button class="cokbutton" onclick="hateclick()">I hate my life button</button>
+<p>Life hates:</p> <p id="ccookie">0</p>
+
 </body>
 
 <!-- stupid scripts -->
 <script src="./js/loading.js"></script>
 <script src="./js/dark.js"></script>
+<script src="./js/hateclicker.js"></script>
 <!-- <script src="https://code.jquery.com/jquery-3.4.1.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
