ihatemylife: adding our hastag

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#home" class="w3-button w3-bar-item">Home</a>
         <a class="w3-button w3-bar-item" onclick="darktoggle()" >Dark Mode</a>
       </nav>
-<h1>I hate my life</h1>
+<h1>I hate my life #NoLifeMatters</h1>
 <p>Hi there, this is the i hate my life website, We absolutely hate our lives here</p>
 <p>You are thinking,<br> WHAT <br>
 THE <br>
